# KZip

./: .gitignore  CMakeLists.txt  README.md
@doxy/: CMakeLists.txt  Doxyfile.in
@examples/: CMakeLists.txt  example1.cpp  tableprinter.h
@library/: CMakeLists.txt  SimpleZip.h  ZipArchive.cpp  ZipArchive.h  ZipEntry.cpp  ZipEntry.h  ZipException.h  Zippy.h
@library/Zippy/miniz/: miniz.h
@library/miniz/: miniz.c  miniz.h
@tests/: CMakeLists.txt  SimpleZipTest.cpp  ZippyTest.cpp
@tests/catch2/: catch.hpp  catch_reporter_automake.hpp  catch_reporter_tap.hpp  catch_reporter_teamcity.hpp
KZip/: CMakeLists.txt  KZip.cpp  KZip.hpp
doxy/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example1.cpp  image.h
tests/: CMakeLists.txt  TestMain.cpp  ZipArchiveTest.cpp  ZippyTest.cpp  test-data-binary.hpp  test-data-text.hpp  test-data-winzip-archive.hpp
